force-app/main/default/objects/amazonconnect__AC_CCPOverlayElement__c/amazonconnect__AC_CCPOverlayElement__c.object-meta.xml
<CustomObject>
    <label>AC CCP Overlay Element</label>
    <nameField>
        <label>AC CCP Overlay Element Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC CCP Overlay Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>