force-app/main/default/objects/amazonconnect__AC_CCPOverlayElement__c/fields/amazonconnect__CTIFlow__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__CTIFlow__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>CTI Flow</label>
    <referenceTo>amazonconnect__AC_CtiScript__c</referenceTo>
    <relationshipLabel>AC CCP Overlay Elements</relationshipLabel>
    <relationshipName>AC_CCP_Overlay_Elements</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>