force-app/main/default/objects/amazonconnect__AC_CCPOverlayElement__c/fields/amazonconnect__Order__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Order__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Order</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>