force-app/main/default/objects/amazonconnect__AC_CCPOverlayElement__c/fields/amazonconnect__Payload__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Payload__c</fullName>
    <defaultValue>(&quot;{}&quot;)</defaultValue>
    <label>Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>