force-app/main/default/objects/amazonconnect__AC_CCPOverlayElement__c/fields/amazonconnect__Type__c.field-meta.xml
<CustomField>
    <fullName>amazonconnect__Type__c</fullName>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Action</fullName>
                <default>true</default>
                <label>Action</label>
            </value>
            <value>
                <fullName>Tab</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>